"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-05-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-03-CHP-02-01:
	  Branch spawned for CHP language support development.  
	  Added NOTES entry discussing prospect of upgrading CHP
		to support nonmeta references over meta references.  
	  Added meta-loop selection construct to CHP grammar, 
		and added AST and IR classes 'metaloop_selection'.  
		Objective: to expand into equivalent fixed-way selections.  
		Also added persistent type key CHP_SELECT_LOOP_TYPE_KEY.  
	  Makefile.am: install scripts depend on config.status
	  common/ICE.cc: uses CVSTAG from cvstag.h
	  TODO: currently compiler rejects attempts create
		nonmeta_value_references to parameters, ... enable me!
	  TODO: iron-out test cases chp/065,066


2006-05-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-03:
	  Installed scripts: haco (compile), hacunroll, haccreate, hacalloc,
		hflat (cflat), hacprsim (prsim) for user convenience.  
		Scripts' names are also transformed by configure upon
		installation.  Scripts verified runnable in installcheck-local.
	  Also: should not be reference $(DESTDIR) on installed files, 
		only staged installations.  


2006-05-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-02:
	  More portability fixes, regarding nested types, using declarations,
		unused variables, iterator traits, explicit default ctors.  


2006-05-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-01:
	  Portability touch-ups only, in util library.  


2006-05-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79:
	  Makefile.am: added more preprocessor intermediate file suffix rules.
	  Minor source touch-ups for standard conformance.  


2006-05-06	David Fang		<fangism@users.sourceforge.net>
