@@ -10,7 +10,7 @@
 	preprocessor definition.  
 	However, in production code, this file should be EMPTY, 
 	and NO translation unit should depend on this i.e. do not include.  
-	$Id: devel_switches.h,v 1.13 2006/04/28 03:20:11 fang Exp $
+	$Id: devel_switches.h,v 1.13.4.1 2006/05/12 01:57:46 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_DEVEL_SWITCHES_H__
@@ -22,7 +22,7 @@
 #endif
 
 // leave this error enabled for released code
-#if 1
+#if 0
 #error	Production code should NOT include this header file.  \
 	However, if you are developing, use this file as you see fit.  
 #endif
@@ -33,6 +33,14 @@
 /**
 	TODO: decide policy for handling relaxed type actuals.  
  */
+
+/**
+	Define to 1 to enable nonmeta_instance_references to
+	meta parameters, (pint, pbool, preal).  
+	These instance references, however, will be rvalue-only.  
+	Compile-time constants can never be lvalues!
+ */
+#define	USE_NONMETA_VALUE_REFERENCES			1
 
 //=============================================================================
 
