@@ -3,7 +3,7 @@
 	Method definitions for parameter instance collection classes.
 	This file was "Object/art_object_value_collection.tcc"
 		in a previous life.  
- 	$Id: value_collection.tcc,v 1.15 2006/05/06 22:08:24 fang Exp $
+ 	$Id: value_collection.tcc,v 1.15.2.1 2006/05/12 01:57:52 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_INST_VALUE_COLLECTION_TCC__
@@ -46,6 +46,9 @@
 #include "Object/unroll/unroll_context_value_resolver.h"
 #include "Object/ref/meta_value_reference.h"
 #include "Object/ref/simple_meta_value_reference.h"
+#if USE_NONMETA_VALUE_REFERENCES
+#include "Object/ref/data_nonmeta_instance_reference.h"
+#endif
 
 #include "common/ICE.h"
 
@@ -301,6 +304,21 @@ VALUE_COLLECTION_CLASS::make_meta_value_reference(void) const {
 			never_ptr<this_type>(const_cast<this_type*>(this))));
 		// omitting index argument
 }
+
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+#if USE_NONMETA_VALUE_REFERENCES
+/**
+	New: Create an rvalue reference to a meta parameter, possibly
+		indexed with a nonmeta-value subscript.  
+ */
+VALUE_COLLECTION_TEMPLATE_SIGNATURE
+count_ptr<nonmeta_instance_reference_base>
+VALUE_COLLECTION_CLASS::make_nonmeta_instance_reference(void) const {
+	typedef	count_ptr<nonmeta_instance_reference_base>	ptr_return_type;
+	return ptr_return_type(new simple_nonmeta_instance_reference_type(
+		never_ptr<const this_type>(this)));
+}
+#endif
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /**
